--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ h1{
 
 .idt{
     font-style: italic;
+    font-size: 30px;
 }
 
 .fels{
@@ -61,10 +62,20 @@ hr{
     font-size: 20px;
 }
 
+.italic{
+    font-style: italic;
+}
 
+.doki{
+    border-radius: 5%;
+    width: 400px;
+    display: block;
+    margin: auto; 
+}
 
 footer{
     text-align: center;
     padding: 3px;
     background-color: white;
 }
+
